--- a/staticpages/index.html
+++ b/staticpages/index.html
@@ -14,7 +14,7 @@
     <a href="#home" class="w3-bar-item w3-button"><b>Trainers</b> Inc.</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href= "/index.html" class="w3-bar-item w3-button"><i class="fa fa-graduation-cap"></i> Records</a>
+      <a href= "#home" class="w3-bar-item w3-button"><i class="fa fa-graduation-cap"></i> Records</a>
       <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-info"></i> About</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-comment"></i> Contact</a>
     </div>
@@ -82,6 +82,7 @@
   <div class="w3-center w3-black w3-padding-16" id="contact">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"><i class="fa fa-comment"> </i> <b>CONTACT US</b></h3>
     <p>Lets get in touch and talk about uploading all your training records.</p>
+     <p><a href="/home" class="w3-hover-text-green">LOG IN HERE</a></p>
     <form action="/gmit.ie" target="_blank">
       <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
       <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
